--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>hola mundo</h1>
     <br>
-    <h2>¿como vamos PORKY?</h2>
+    <h2>¿como vamos avanzando?</h2>
     
     
 </body>
