--- a/w3.html
+++ b/w3.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>COMIENZO</title>
 </head>
 <body>
-    <h1>hola mundo</h1>
-    <br>
-    <h2>¿como vamos?</h2>
-    
-    
+    <h1>este es un encabezado</h1>
+    <p>empezando a programar</p>
+    <p>¿lo lograre?</p>
+
+    <a href=""></a>
+
 </body>
 </html>
