--- a/PRACTICAS/paginapersonal.html
+++ b/PRACTICAS/paginapersonal.html
@@ -11,7 +11,7 @@
     <div class="main">
         <header class="header">
             <figure class="container-image">
-                <img src="./recursos/gandalf.jpg" alt="foto de Gandalf" class="image">
+                <img src="./recursos/gandalf.jpg" alt="foto de Gandalf" class="imgitage">
             </figure>
         </header>
         <article class="article">
