--- a/PRACTICAS/practicafigma.html
+++ b/PRACTICAS/practicafigma.html
@@ -30,6 +30,26 @@
             </div>
 
         </section>
+
+        <section class="services">
+            <h2>SERVICIOS</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit, possimus molestias ipsam eius omnis soluta unde impedit, modi tempora fuga repudiandae excepturi ab laborum deserunt, esse ad aliquam quae architecto!</p>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sunt debitis atque animi sint dolorum, accusamus nesciunt saepe repudiandae architecto magnam, obcaecati earum accusantium nam. Vero possimus dicta dolorum iure facere.</p>
+            <div>
+                <img src="/PRACTICAS/recursos/Rectangle 5.png" alt="">
+                <img src="/PRACTICAS/recursos/Rectangle 6.png" alt="">
+                <img src="/PRACTICAS/recursos/Rectangle 7.png" alt="">
+            </div>
+        </section>
+
+        <nav class="list">
+            <ul>
+                <li>Servicio uno</li>
+                <li>Servicio dos</li>
+                <li>Servicio tres</li>
+                <li>Servicio cuatro</li>
+            </ul>
+        </nav>
     </div>
 </body>
 </html>
