--- a/index.html
+++ b/index.html
@@ -7,10 +7,24 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>hola mundo</h1>
-    <br>
-    <h2>¿como vamos?</h2>
-    
+    <!-- esto es el encabezado -->
+    <header>
+        <nav>
+            <span>
+                LOGO
+            </span>
+        </nav>
+    <!-- es una lista -->    
+    <ul>
+        <li><a href="./inicio.html">INICIO</a></li>
+        <li><a href="./nosotros.html">NOSOTROS</a></li>
+        <li><a href="./contacto.html">CONTACTO</a></li>
+        <li><a href="./formulario.html">FORMULARIO</a></li>
+    </ul>    
+    </header>
+    <section>
+        <img src="./PRACTICAS/recursos/gandalf.jpg" alt="">
+    </section>
     
 </body>
 </html>
