--- a/contacto.html
+++ b/contacto.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
-    <h1>cristian guadlupe alcantara</h1>
-    <h5>crisalhep</h5>
-    
+    <h1>contactanos</h1>
+    <a href="./index.html">volver al inicio</a>
+
 </body>
 </html>
