--- a/nosotros.html
+++ b/nosotros.html
@@ -7,11 +7,8 @@
     <title>COMIENZO</title>
 </head>
 <body>
-    <h1>este es un encabezado</h1>
-    <p>empezando a programar</p>
-    <p>¿lo lograre?</p>
-
-    <a href=""></a>
+    <h1>soy Cristian</h1>
+    <a href="./index.html">volver al principal</a>
 
 </body>
 </html>
