--- a/index.html
+++ b/index.html
@@ -2,9 +2,27 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <!-- Primary Meta Tags -->
+<title>INDICE</title>
+<meta name="title" content="INDICE">
+<meta name="description" content="Esta es una prueba de metadatos.">
+
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://frontedg18-nuevo.vercel.app/">
+<meta property="og:title" content="INDICE">
+<meta property="og:description" content="Esta es una prueba de metadatos.">
+<meta property="og:image" content="">
+
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image">
+<meta property="twitter:url" content="https://frontedg18-nuevo.vercel.app/">
+<meta property="twitter:title" content="INDICE">
+<meta property="twitter:description" content="Esta es una prueba de metadatos.">
+<meta property="twitter:image" content="">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>PAGINA PERSONAL</title>
 </head>
 <body>
     <!-- esto es el encabezado -->
