--- a/PRACTICAS/practicafigma.html
+++ b/PRACTICAS/practicafigma.html
@@ -44,10 +44,10 @@
 
         <nav class="list">
             <ul>
-                <li>Servicio uno</li>
-                <li>Servicio dos</li>
-                <li>Servicio tres</li>
-                <li>Servicio cuatro</li>
+                <li class="servicio1">Servicio uno</li>
+                <li class="servicio2">Servicio dos</li>
+                <li class="servicio3">Servicio tres</li>
+                <li class="servicio4">Servicio cuatro</li>
             </ul>
         </nav>
     </div>
