--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
         <li><a href="./nosotros.html">NOSOTROS</a></li>
         <li><a href="./contacto.html">CONTACTO</a></li>
         <li><a href="./formulario.html">FORMULARIO</a></li>
+        <li><a href="./PRACTICAS/paginapersonal.html">PAGINA PERSONAL</a></li>
+        <li><a href="./PRACTICAS/practicafigma.html"></a>PRACTICAFIGMA</li>
+        
     </ul>    
     </header>
     <section>
