--- a/PRACTICAS/practicafigma.html
+++ b/PRACTICAS/practicafigma.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="practicafigma.css">
-    <title> MUESTRPAGINA</title>
+    <title> PRACTICA FIGMA</title>
 </head>
 <body>
     <div class="wrap">
@@ -44,12 +44,35 @@
 
         <nav class="list">
             <ul>
-                <li class="servicio1">Servicio uno</li>
-                <li class="servicio2">Servicio dos</li>
-                <li class="servicio3">Servicio tres</li>
-                <li class="servicio4">Servicio cuatro</li>
+                <li>Servicio uno</li>
+                <li>Servicio dos</li>
+                <li>Servicio tres</li>
+                <li>Servicio cuatro</li>
             </ul>
         </nav>
+
+        <section class="portafolio">
+            <h2>PORTAFOLIO</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis sint et minus sit tempore architecto eius eveniet ducimus harum odit expedita, maiores doloribus accusamus autem libero. Ratione beatae quis non.</p>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Exercitationem, tempora deserunt. Inventore perspiciatis aperiam sapiente illo ratione magnam, ullam omnis consequuntur? Mollitia nobis perferendis ipsam dicta. Fuga veritatis totam quaerat!</p>
+            <div>
+                <img src="./recursos/Rectangle 8.png" alt="">
+                <img src="./recursos/Rectangle 9.png" alt="">
+                <img src="./recursos/Rectangle 10.png" alt="">
+            </div>
+        </section>
+
+        <nav class="list">
+            <ul>
+                <li>Servicio uno</li>
+                <li>Servicio dos</li>
+                <li>Servicio tres</li>
+                <li>Servicio cuatro</li>
+            </ul>
+        </nav>
+
+
+
     </div>
 </body>
 </html>
