--- a/PRACTICAS/practicafigma.html
+++ b/PRACTICAS/practicafigma.html
@@ -62,7 +62,7 @@
             </div>
         </section>
 
-        <nav class="list">
+        <nav class="list2">
             <ul>
                 <li>Servicio uno</li>
                 <li>Servicio dos</li>
