--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <li><a href="./contacto.html">CONTACTO</a></li>
         <li><a href="./formulario.html">FORMULARIO</a></li>
         <li><a href="./PRACTICAS/paginapersonal.html">PAGINA PERSONAL</a></li>
-        <li><a href="./PRACTICAS/practicafigma.html"></a>PRACTICAFIGMA</li>
+        <li><a href="./PRACTICAS/practicafigma.html">PRACTICA FIGMA</a></li>
         
     </ul>    
     </header>
