--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <li><a href="./formulario.html">FORMULARIO</a></li>
         <li><a href="./PRACTICAS/paginapersonal.html">PAGINA PERSONAL</a></li>
         <li><a href="./PRACTICAS/practicafigma.html">PRACTICA FIGMA</a></li>
-        
+        <li><a href="./PRACTICAS/animaciones.html">ANIMACIONES</a></li>
     </ul>    
     </header>
     <section>
