--- a/PRACTICAS/animaciones.html
+++ b/PRACTICAS/animaciones.html
@@ -20,6 +20,11 @@
 
         <h2>PELOTA</h2>
         <div class="ball-uno"></div>
+
+        <h2>TEXTO QUE SE ESCRIBE SOLO</h2>
+        <p class="texto-animado-dos lineas">
+            Hola, mi nombre es Cristian, estoy aprendiendo codigos raros
+        </p>
         
         
     </section>
