--- a/semana2/index.html
+++ b/semana2/index.html
@@ -38,6 +38,7 @@
         <li><a href="./nosotros.html">NOSOTROS</a></li>
         <li><a href="./contacto.html">CONTACTO</a></li>
         <li><a href="./formulario.html">FORMULARIO</a></li>
+        <li><a href="./semana2/tablas.html">TABLAS</a></li>
         <li><a href="./PRACTICAS/paginapersonal.html">PAGINA PERSONAL</a></li>
         <li><a href="./PRACTICAS/practicafigma.html">PRACTICA FIGMA</a></li>
         <li><a href="./PRACTICAS/animaciones.html">ANIMACIONES</a></li>
