--- a/PRACTICAS/practicafigma.html
+++ b/PRACTICAS/practicafigma.html
@@ -13,14 +13,14 @@
             <a class="logo">LOGO</a>
             <nav>
                 <ul>
-                    <li><a href="">HOME</a></li>
-                    <li><a href="">SERVICIOS</a></li>
-                    <li><a href="">PORTAFOLIO</a></li>
-                    <li><a href="">CONTACTO</a></li>
+                    <li><a href="#home">HOME</a></li>
+                    <li><a href="#service">SERVICIOS</a></li>
+                    <li><a href="#portafolio">PORTAFOLIO</a></li>
+                    <li><a href="#contact">CONTACTO</a></li>
                 </ul>
             </nav>
         </header>
-        <section class="home">
+        <section class="home" id="home">
             <h2>HOME</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias, beatae facere numquam dolores molestias quasi sint dolor sed earum iste nostrum commodi saepe temporibus recusandae quos. Incidunt accusamus voluptatem ducimus.</p>
             <div>
@@ -31,7 +31,7 @@
 
         </section>
 
-        <section class="services">
+        <section class="services"  id="service">
             <h2>SERVICIOS</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit, possimus molestias ipsam eius omnis soluta unde impedit, modi tempora fuga repudiandae excepturi ab laborum deserunt, esse ad aliquam quae architecto!</p>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sunt debitis atque animi sint dolorum, accusamus nesciunt saepe repudiandae architecto magnam, obcaecati earum accusantium nam. Vero possimus dicta dolorum iure facere.</p>
@@ -51,7 +51,7 @@
             </ul>
         </nav>
 
-        <section class="portafolio">
+        <section class="portafolio" id="portafolio">
             <h2>PORTAFOLIO</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis sint et minus sit tempore architecto eius eveniet ducimus harum odit expedita, maiores doloribus accusamus autem libero. Ratione beatae quis non.</p>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Exercitationem, tempora deserunt. Inventore perspiciatis aperiam sapiente illo ratione magnam, ullam omnis consequuntur? Mollitia nobis perferendis ipsam dicta. Fuga veritatis totam quaerat!</p>
@@ -70,9 +70,27 @@
                 <li>Servicio cuatro</li>
             </ul>
         </nav>
-
-
-
+        <section class="contact" id="contact">
+            <h2>CONTACTO</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloremque in laborum aspernatur, voluptatem obcaecati possimus sequi soluta ratione dolorum dolor cupiditate blanditiis odio facilis esse itaque fuga illum illo voluptatum?</p>
+        </section>
+        <section>
+        <form action="">
+            <input type="text" value="Nombre y Apellido">
+            <textarea name="" id="" cols="30" rows="10">Detalle</textarea>
+            <button>ENVIAR</button>
+        </form>
+        </section>
+        <section class="footer">
+            <footer>
+                <div>
+                    TODOS LOS DERECHOS RESERVADOS
+                </div>
+                <div>
+                    Creado por codiGO
+                </div>
+            </footer>
+        </section>
     </div>
 </body>
 </html>
