--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
         </nav>
     <!-- es una lista -->    
     <ul>
-        <li><a href="./inicio.html">INICIO</a></li>
-        <li><a href="./nosotros.html">NOSOTROS</a></li>
-        <li><a href="./contacto.html">CONTACTO</a></li>
-        <li><a href="./formulario.html">FORMULARIO</a></li>
+        <li><a href="./semana2/inicio.html">INICIO</a></li>
+        <li><a href="./semana2/nosotros.html">NOSOTROS</a></li>
+        <li><a href="./semana2/contacto.html">CONTACTO</a></li>
+        <li><a href="./semana2/formulario.html">FORMULARIO</a></li>
         <li><a href="./semana2/tablas.html">TABLAS</a></li>
         <li><a href="./PRACTICAS/paginapersonal.html">PAGINA PERSONAL</a></li>
         <li><a href="./PRACTICAS/practicafigma.html">PRACTICA FIGMA</a></li>
