--- a/semana2/tablas.html
+++ b/semana2/tablas.html
@@ -4,10 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="stilos.css">
+    <link rel="stylesheet" href="stilostablas.css">
     <title>Document</title>
 </head>
-<>
     <h1>TABLAS</h1>
     <!-- etiqueta de encabezado de tablas -->
     <table border="10" bgcolor="blue"  >
@@ -17,9 +16,7 @@
             <th>APELLIDOS</th>
             <th>CORREO</th>
             <th>TELEFONO</th>
-
         </tr>
-
     </thead>
     <tbody>
         <tr>
