--- a/PRACTICAS/practicafigma.html
+++ b/PRACTICAS/practicafigma.html
@@ -24,9 +24,9 @@
             <h2>HOME</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias, beatae facere numquam dolores molestias quasi sint dolor sed earum iste nostrum commodi saepe temporibus recusandae quos. Incidunt accusamus voluptatem ducimus.</p>
             <div>
-                <img src="/PRACTICAS/recursos/Rectangle 2.png" alt="">
-                <img src="/PRACTICAS/recursos/Rectangle 3.png" alt="">
-                <img src="/PRACTICAS/recursos/Rectangle 4.png" alt="">
+                <img src="../recursos/Rectangle 2.png" alt="">
+                <img src="../recursos/Rectangle 3.png" alt="">
+                <img src="../recursos/Rectangle 4.png" alt="">
             </div>
 
         </section>
@@ -36,9 +36,9 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit, possimus molestias ipsam eius omnis soluta unde impedit, modi tempora fuga repudiandae excepturi ab laborum deserunt, esse ad aliquam quae architecto!</p>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sunt debitis atque animi sint dolorum, accusamus nesciunt saepe repudiandae architecto magnam, obcaecati earum accusantium nam. Vero possimus dicta dolorum iure facere.</p>
             <div>
-                <img src="/PRACTICAS/recursos/Rectangle 5.png" alt="">
-                <img src="/PRACTICAS/recursos/Rectangle 6.png" alt="">
-                <img src="/PRACTICAS/recursos/Rectangle 7.png" alt="">
+                <img src="../recursos/Rectangle 5.png" alt="">
+                <img src="../recursos/Rectangle 6.png" alt="">
+                <img src="../recursos/Rectangle 7.png" alt="">
             </div>
         </section>
 
@@ -56,9 +56,9 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis sint et minus sit tempore architecto eius eveniet ducimus harum odit expedita, maiores doloribus accusamus autem libero. Ratione beatae quis non.</p>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Exercitationem, tempora deserunt. Inventore perspiciatis aperiam sapiente illo ratione magnam, ullam omnis consequuntur? Mollitia nobis perferendis ipsam dicta. Fuga veritatis totam quaerat!</p>
             <div>
-                <img src="./recursos/Rectangle 8.png" alt="">
-                <img src="./recursos/Rectangle 9.png" alt="">
-                <img src="./recursos/Rectangle 10.png" alt="">
+                <img src="../Rectangle 8.png" alt="">
+                <img src="../Rectangle 9.png" alt="">
+                <img src="../Rectangle 10.png" alt="">
             </div>
         </section>
 
