--- a/semana3/reto-figma-2.html
+++ b/semana3/reto-figma-2.html
@@ -8,13 +8,21 @@
     <title>RETO FIGMA 2</title>
 </head>
 <body>
-    <header class="header">
-    <div class="wrap">
-        <h1 class="title">CodiGO</h1>
-        <img class="background-image" src="../recursos/dragon.jpg" alt="">
-        <h2>Hola, mi nombre es Daemon Targaryen</h2>
-    </div>
-    </header>
-    <section></section>
+    <section>
+        <div class="background-img">
+           <div id="fondo" class="background-img">
+            <h1 class="text-codigo">CodiGO</h1>
+            <p class="presentation">Hola, mi nombre es Cristian Guadalupe</p>
+           </div>
+
+        </div>   
+    </section>
+    <section>
+        <div class="text-codigo">
+            <h1>CodiGO</h1>
+        </div> 
+    </section>
+
+    
 </body>
 </html>
