--- a/PRACTICAS/paginapersonal.html
+++ b/PRACTICAS/paginapersonal.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="paginapersonal.css">
+    <link rel="stylesheet" href="../PRACTICAS/paginapersonal.css">
     <title>PAGINA PERSONAL</title>
 </head>
 <body class="body">
     <div class="main">
         <header class="header">
             <figure class="container-image">
-                <img src="./recursos/gandalf.jpg" alt="foto de Gandalf" class="imgitage">
+                <img src="../recursos/gandalf.ico.jpg" alt="foto de Gandalf" class="imgitage">
             </figure>
         </header>
         <article class="article">
@@ -20,11 +20,11 @@
             <p class="presentation">En proceso</p>
         </article>
         <footer class="footer">
-            <a href="https://www.facebook.com/" class="footer-link-container"><img src="./recursos/icon facebook.png" alt="icon-facebook" class="footer-link"></a>
+            <a href="https://www.facebook.com/" class="footer-link-container"><img src="../recursos/icon facebook.png" alt="icon-facebook" class="footer-link"></a>
 
-            <a href="https://www.instagram.com/" class="footer-link-container"><img src="./recursos/icon instagram.png" alt="icon-instagram" class="footer-link"></a>
+            <a href="https://www.instagram.com/" class="footer-link-container"><img src="../recursos/icon instagram.png" alt="icon-instagram" class="footer-link"></a>
 
-            <a href="https://twitter.com/i/flow/login" class="footer-link-container"><img src="./recursos/icon twitter.png" alt="icon-twitter" class="footer-link"></a>
+            <a href="https://twitter.com/i/flow/login" class="footer-link-container"><img src="../recursos/icon twitter.png" alt="icon-twitter" class="footer-link"></a>
 
         
         </footer>
