--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <button class="btn-primary">Download Resumen</button>
         </div>
         <div>
-            <img class="img-profile" width="300" src="./PRACTICAS/recursos/gandalf.jpg" alt="">
+            <img class="img-profile" width="300" src="./recursos/gandalf.ico.jpg" alt="">
         </div>
     </section>
    <hr>
