--- a/semana3/reto-figma-2.html
+++ b/semana3/reto-figma-2.html
@@ -8,21 +8,98 @@
     <title>RETO FIGMA 2</title>
 </head>
 <body>
-    <section>
-        <div class="background-img">
-           <div id="fondo" class="background-img">
-            <h1 class="text-codigo">CodiGO</h1>
-            <p class="presentation">Hola, mi nombre es Cristian Guadalupe</p>
-           </div>
+    <!--position absolute y relative-->
+    <div class="wrap">
+        <div class="cabecera">
+            <div>
+                <figure>
+                    <img src="../recursos/image figma 1.png" alt="">
+                </figure>
+                <h1>CodiGO</h1>
+                <h2>Hola, mi nombre <br> es Cristian Guadalupe</h2>
+            </div>
+        </div>
+        <div class="sobre-mi">
+            <h2>SOBRE MI</h2>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo debitis excepturi placeat expedita recusandae ex atque sed consectetur odit, molestiae vel cupiditate in deserunt tenetur voluptatem, repellendus rerum nostrum minus? Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta obcaecati aut, ratione veritatis ad, quasi earum unde tenetur nisi nobis laboriosam quisquam optio quia eaque porro ipsum necessitatibus debitis libero. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo debitis excepturi placeat expedita recusandae ex atque sed consectetur odit, molestiae vel cupiditate in deserunt tenetur voluptatem, repellendus rerum nostrum minus? Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta obcaecati aut, ratione veritatis ad, quasi earum unde tenetur nisi nobis laboriosam quisquam optio quia eaque porro ipsum necessitatibus debitis libero
+            </p>
+            <button class="boton">VER CV</button>
+        </div>
+        <div class="mis-skills">
+            <h2>MIS SKILLS</h2>
+            <div class="skill-container">
+                <div class="skills">
+                    <p>HTML</p>
+                    <div class="progress">
+                        <div class="fondo"></div>
+                    </div>
+                </div>
+                <div class="skills">
+                    <p>CSS</p>
+                    <div class="progress">
+                        <div class="fondo"></div>
+                    </div>
+                </div>
+                <div class="skills">
+                    <p>JAVASCRIPT</p>
+                    <div class="progress">
+                        <div class="fondo"></div>
+                    </div>
+                </div>
+                <div class="skills">
+                    <p>VUE</p>
+                    <div class="progress">
+                        <div class="fondo"></div>
+                    </div>
+                </div>
+                <div class="skills">
+                    <p>FLEXBOX</p>
+                    <div class="progress">
+                        <div class="fondo"></div>
+                    </div>
+                </div>
+                <div class="skills">
+                    <p>CSS Grid</p>
+                    <div class="progress">
+                        <div class="fondo"></div>
+                    </div>
+                </div>
+            </div>
 
-        </div>   
-    </section>
-    <section>
-        <div class="text-codigo">
-            <h1>CodiGO</h1>
-        </div> 
-    </section>
+        </div>
+        <div class="portafolio">
+            <h2>PORTAFOLIO</h2>
+            <DIV class="portafolio-container">
+                <figure><img src="../recursos/image20.png" alt=""></figure>
+                <figure><img src="../recursos/image21.png" alt=""></figure>
+                <figure><img src="../recursos/image22.png" alt=""></figure>
+                <figure><img src="../recursos/image23.png" alt=""></figure>
+                <figure><img src="../recursos//image24.png" alt=""></figure>
+                <figure><img src="../recursos/image25.png" alt=""></figure>
+                <figure><img src="../recursos/image26.png" alt=""></figure>
+                <figure><img src="../recursos/image27.png" alt=""></figure>
+            </DIV>
+        </div>
+        <div class="contacto">
+            <h2>CONTACTO</h2>
+            <div class="contacto-container">
+                <figure><img src="../recursos/icon1.png" alt=""></figure>
+                <figure><img src="../recursos/icon2.png" alt=""></figure>
+                <figure><img src="../recursos/icon3.png" alt=""></figure>
+                <figure><img src="../recursos/icon4.png" alt=""></figure>
+            </div>
+        </div>
+        <section>
+            <form action="">
+                <input type="text" value="Nombre y Apellido">
+                <textarea name="" id="" cols="30" rows="10">Detalle</textarea>
+                <button>ENVIAR</button>
+            </form>
+            </section>
 
-    
+
+
+    </div>  
 </body>
 </html>
