--- a/HTML-CSS.html
+++ b/HTML-CSS.html
@@ -4,10 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="./PRACTICAS/recursos/gandalf.ico">
+    <link rel="stylesheet" href="HTML-CSS.css">
     <title>PRIMERA PAGINA WEB</title>
 </head>
 <body>
+    <div>
+        <h1>MI PRIMERA PAGINA WE</h1>
+        <h2>Pagina CSS HTML</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde, ex voluptatum commodi quos rerum vitae et sit dolorum veritatis tempore reiciendis cupiditate voluptatibus. Deleniti sed veniam, omnis tempore iste placeat?</p>
+    </div>
+    <div>
+        <button>FOLLOW</button>
+        <input type="Enviar" value="Sigueme">
     
+    </div>
+
 </body>
 </html>
