--- a/semana3/reto-figma-3.html
+++ b/semana3/reto-figma-3.html
@@ -31,47 +31,37 @@
                 <div class="list-item">
                     <h3>HTML</h3>
                     <div class="list-bar">
-                        <div></div>
+                        <div style="width:60%"></div>
                     </div>
                 </div>
-            </div>
-            <div class="list">
-                <div class="list-item">
-                    <h3>JavaScript</h3>
-                    <div class="list-bar">
-                        <div></div>
-                    </div>
-                </div>
-            </div>
-            <div class="list">
-                <div class="list-item">
-                    <h3>Flexbox</h3>
-                    <div class="list-bar">
-                        <div></div>
-                    </div>
-                </div>
-            </div>
-            <div class="list">
                 <div class="list-item">
                     <h3>CSS</h3>
                     <div class="list-bar">
-                        <div></div>
+                        <div style="width:15%"></div>
                     </div>
                 </div>
-            </div>
-            <div class="list">
                 <div class="list-item">
-                    <h3>VUE</h3>
+                    <h3>JavaScript</h3>
                     <div class="list-bar">
-                        <div></div>
+                        <div style="width:50%"></div>
                     </div>
                 </div>
-            </div>
-            <div class="list">
                 <div class="list-item">
-                    <h3>CSS Grid</h3>
+                    <h3>Vue</h3>
                     <div class="list-bar">
-                        <div></div>
+                        <div style="width:70%"></div>
+                    </div>
+                </div>
+                <div class="list-item">
+                    <h3>Flexbox</h3>
+                    <div class="list-bar">
+                        <div style="width:80%"></div>
+                    </div>
+                </div>
+                <div class="list-item">
+                    <h3>CSS-Grid</h3>
+                    <div class="list-bar">
+                        <div style="width:40%"></div>
                     </div>
                 </div>
             </div>
@@ -80,13 +70,28 @@
             <h2 class="portafolio-2">Portafolio</h2>
             <div class="portafolio-images">
                 <figure><img src="../recursos/image20.png" alt=""></figure>
-                <figure><img src="../recursos/image20.png" alt=""></figure>
-                <figure><img src="../recursos/image20.png" alt=""></figure>
-                <figure><img src="../recursos/image20.png" alt=""></figure>
-                <figure><img src="../recursos/image20.png" alt=""></figure>
-                <figure><img src="../recursos/image20.png" alt=""></figure>
-                <figure><img src="../recursos/image20.png" alt=""></figure>
-                <figure><img src="../recursos/image20.png" alt=""></figure>
+                <figure><img src="../recursos/image21.png" alt=""></figure>
+                <figure><img src="../recursos/image22.png" alt=""></figure>
+                <figure><img src="../recursos/image23.png" alt=""></figure>
+                <figure><img src="../recursos/image24.png" alt=""></figure>
+                <figure><img src="../recursos/image25.png" alt=""></figure>
+                <figure><img src="../recursos/image26.png" alt=""></figure>
+                <figure><img src="../recursos/image27.png" alt=""></figure>
+            </div>
+        </section>
+        <section class="contact">
+            <h2>Contacto</h2>
+            <form>
+                <input type="text" placeholder="Nombre">
+                <input type="text" placeholder="Apellidos">
+                <input type="text" placeholder="E-mail">
+                <input type="text" placeholder="Telefono">
+            </form>
+            <div>
+                <textarea rows="10"></textarea>
+            </div><br>
+            <div>
+                <button class="button-contact">Enviar</button>
             </div>
         </section>
     </main>
