--- a/semana3/reto-figma-3.html
+++ b/semana3/reto-figma-3.html
@@ -81,11 +81,11 @@
         </section>
         <section class="contact">
             <h2>Contacto</h2>
-            <form>
-                <input type="text" placeholder="Nombre">
-                <input type="text" placeholder="Apellidos">
-                <input type="text" placeholder="E-mail">
-                <input type="text" placeholder="Telefono">
+            <form class="form">
+                <div><input class="name" type="text" placeholder="Nombre"></div>
+                <div><input class="last-name" type="text" placeholder="Apellidos"></div>
+                <div><input class="email" type="text" placeholder="E-mail"></div>
+                <div><input class="phone" type="text" placeholder="Telefono"></div>
             </form>
             <div>
                 <textarea rows="10"></textarea>
