--- a/semana3/reto-figma-3.html
+++ b/semana3/reto-figma-3.html
@@ -82,11 +82,11 @@
         <section class="contact">
             <h2>Contacto</h2>
             <form class="form">
-                <div><input class="name" type="text" placeholder="Nombre"></div>
-                <div><input class="last-name" type="text" placeholder="Apellidos"></div>
-                <div><input class="email" type="text" placeholder="E-mail"></div>
-                <div><input class="phone" type="text" placeholder="Telefono"></div>
-            </form>
+                <div><input class="input" type="text" placeholder="Nombre"></div>
+                <div><input class="input" type="text" placeholder="Apellidos"></div>
+                <div><input class="input" type="text" placeholder="E-mail"></div>
+                <div><input class="input" type="text" placeholder="Telefono"></div>
+            </form><br>
             <div>
                 <textarea rows="10"></textarea>
             </div><br>
