--- a/semana3/reto-figma-3.html
+++ b/semana3/reto-figma-3.html
@@ -79,20 +79,29 @@
                 <figure><img src="../recursos/image27.png" alt=""></figure>
             </div>
         </section>
+        <section class="clients">
+            <h2 class="subtitle-clients">Clientes</h2>
+            <div class="clients-images">
+                <figure><img src="../recursos/icon1.png" alt=""></figure>
+                <figure><img src="../recursos/icon2.png" alt=""></figure>
+                <figure><img src="../recursos/icon3.png" alt=""></figure>
+                <figure><img src="../recursos/icon4.png" alt=""></figure>
+            </div>
+        </section>
         <section class="contact">
             <h2>Contacto</h2>
             <form class="form">
                 <div><input class="input" type="text" placeholder="Nombre"></div>
                 <div><input class="input" type="text" placeholder="Apellidos"></div>
-                <div><input class="input" type="text" placeholder="E-mail"></div>
-                <div><input class="input" type="text" placeholder="Telefono"></div>
+                <div><input class="input" type="email" placeholder="E-mail"></div>
+                <div><input class="input" type="number" placeholder="Telefono"></div>
             </form><br>
             <div>
-                <textarea rows="10"></textarea>
+                <input class="textarea" type="text" placeholder="Descripcion">
             </div><br>
-            <div>
-                <button class="button-contact">Enviar</button>
-            </div>
+            <div class="button-contact">
+                <button class="button-send">ENVIAR</button>
+            </div> 
         </section>
     </main>
 </body>
