--- a/semana3/reto4landingpage.html
+++ b/semana3/reto4landingpage.html
@@ -79,20 +79,46 @@
           <div>
             <img class="logo-white" src="./recursolanding/images/logo.svg" alt="">
           </div>
-          <div class="location">
-            <img src="./recursolanding/images/icon-location.svg" alt="">
-            <p>
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolores, culpa quo. Nulla, dolor obcaecati, laborum fuga vero numquam dolores.
-            </p>
+        <div class="container-contact">
+          <div class="container-info">
+            <div class="contact">
+              <img src="./recursolanding/images/icon-location.svg" alt="">
+              <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolores, culpa quo. Nulla, dolor obcaecati, laborum fuga vero.
+              </p>
+            </div>
+            <div class="contact">
+              <img src="./recursolanding/images/icon-phone.svg" alt="">
+              <p>+51-995-556-777</p>
+            </div>
+            <div class="contact">
+              <img src="./recursolanding/images/icon-email.svg" alt="">
+              <p>example@gmail.com</p>
+            </div>
           </div>
-          <div>
-            <img src="./recursolanding/images/icon-phone.svg" alt="">
-            <p>+51-995-556-777</p>
+          <div class="enlaces-footer">
+            <ul>
+              <a href=""><li>About Us</li></a>
+              <a href=""><li>About Us</li></a>
+              <a href=""><li>About Us</li></a>
+            </ul>
           </div>
-          <div>
-            <img src="./recursolanding/images/icon-email.svg" alt="">
-            <p>example@gmail.com</p>
+          <div class="enlaces-footer">
+            <ul>
+              <a href=""><li>Career</li></a>
+              <a href=""><li>Blog</li></a>
+              <a href=""><li>Contact Us</li></a>
+            </ul>
           </div>
+          <div class="enlaces-media">
+             <figure>
+              <img src="./recursolanding/images/facebook2-png.png" alt="">
+              <img src="./recursolanding/images/instagram.png" alt="">
+              <img src="./recursolanding/images/twitter.png" alt="">
+             </figure>
+            
+          </div>
+        </div>
         </section>  
       </footer>
 
