--- a/reto4/reto4landingpage.html
+++ b/reto4/reto4landingpage.html
@@ -116,9 +116,14 @@
               <img src="./recursolanding/images/instagram.png" alt="">
               <img src="./recursolanding/images/twitter.png" alt="">
              </figure>
-            
           </div>
         </div>
+        <div class="copyright">
+          <p>©Copyright 2018 Huddle. All rights reserved.</p>
+        </div>
+        </section>
+        <section>
+        
         </section>  
       </footer>
 
