--- a/reto4/index.html
+++ b/reto4/index.html
@@ -99,8 +99,8 @@
           <div class="enlaces-footer">
             <ul>
               <a href=""><li>About Us</li></a>
-              <a href=""><li>About Us</li></a>
-              <a href=""><li>About Us</li></a>
+              <a href=""><li>What We Do</li></a>
+              <a href=""><li>FAQ</li></a>
             </ul>
           </div>
           <div class="enlaces-footer">
