--- a/reto4/index.html
+++ b/reto4/index.html
@@ -2,6 +2,24 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <!-- Primary Meta Tags -->
+<title>Build The Community Your Fans Will Love</title>
+<meta name="title" content="Build The Community Your Fans Will Love">
+<meta name="description" content="">
+
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://reto4-psi.vercel.app/">
+<meta property="og:title" content="Build The Community Your Fans Will Love">
+<meta property="og:description" content="">
+<meta property="og:image" content="">
+
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image">
+<meta property="twitter:url" content="https://reto4-psi.vercel.app/">
+<meta property="twitter:title" content="Build The Community Your Fans Will Love">
+<meta property="twitter:description" content="">
+<meta property="twitter:image" content="">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./reto4landingpage.css">
