--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./indexstylos.css">
+    <link rel="icon" href="./recursos/gandalf.ico.jpg">
     <title>PAGINA PERSONAL</title>
 </head>
 <body>
