--- a/semana3/recursos-template.css/template-reto.html
+++ b/semana3/recursos-template.css/template-reto.html
@@ -11,14 +11,14 @@
     <main class="wrap">
         <header>
             <div>
-                LOGO
+                figure
             </div>
             <nav class="nav">
                 <ul>
                     <li><a href="">Sobre mi</a></li>
                     <li><a href="">Portafolio</a></li>
                     <li><a href="">Servicios</a></li>
-                    <li><a href="">Sobre mi</a></li>
+                    <li><a href="">Blog</a></li>
                     <li><a href="">Sobre mi</a></li>
                 </ul>
             </nav>
@@ -36,7 +36,7 @@
                 </div>
             </div>
             <div class="profile-image">
-                <img src="" alt="">
+                <img src="./images-template/Ellipse 1.png" alt="">
             </div>
         </section>
         <section>
