--- a/semana4/reto5/index.html
+++ b/semana4/reto5/index.html
@@ -4,24 +4,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./stylos.css">
     <title>Document</title>
 </head>
 <body>
     <section class="main">
         <div class="container">
-            <h1>Comentarios<a href=""></a></h1>
             <ul class="comments-list">
                 <li>
                     <div class="comments-level">
-                        <div><img src="" alt=""></div>
-                        <div class="comment-box">
-                            <div class="comment-head">
+                        <div class="comments-box">
+                            <div class="mas-menos">
+                                <img src="./recursos reto5/images/icon-plus.svg" alt="">
+                                <p>10</p>
+                                <img src="./recursos reto5/images/icon-minus.svg" alt="">
+                            </div>
+                            <div class="comments-head">
+                                <figure><img src="./recursos reto5/images/avatars/image-amyrobson.webp" alt=""></figure>
                                 <h6 class="comment-autor"><a href="">amyrobson</a></h6>
                                 <span>1 month ago</span>
                                 <img src="./recursos reto5/images/icon-reply.svg" alt="reply">
                             </div>
                             <div class="comment-content">
-
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum optio molestias perferendis dolorum! Nihil veritatis rem cupiditate laborum molestias facere nisi saepe! Necessitatibus quo voluptas, rem hic quaerat fugit quos?</p>
                             </div>
                         </div>
                     </div>
@@ -37,10 +42,28 @@
                                 <img src="./recursos reto5/images/icon-reply.svg" alt="reply">
                             </div>
                             <div class="comment-content">
-
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci sed delectus maxime consectetur, tempore cupiditate nihil rem laborum at. Atque harum aspernatur at autem ipsam a qui, nihil vitae voluptas.</p>
                             </div>
                         </div>
                     </div>
+                    <!-- respuestas -->
+                    <ul class="comment-list">
+                        <li>
+                          <div><img src="" alt=""></div>
+                            <div class="comment-box">
+                              <div class="comment-head">
+                                  <h6 class="comment-autor"><a href="">amyrobson</a></h6>
+                                  <span>1 month ago</span>
+                                  <img src="./recursos reto5/images/icon-reply.svg" alt="reply">
+                              </div>
+                              <div class="comment-content">
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum optio molestias perferendis dolorum! Nihil veritatis rem cupiditate laborum molestias facere nisi saepe! Necessitatibus quo voluptas, rem hic quaerat fugit quos?</p>
+                              </div>
+                            </div>
+                        
+                        </li>
+        
+                    </ul>
                 </li>
             </ul>
 
