--- a/semana4/burguer/index.html
+++ b/semana4/burguer/index.html
@@ -4,18 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./main.css">
     <title>Document</title>
 </head>
 <body>
     <header>
         <nav>
-          <a href="">LOGO</a>
-          <ul>
+          <a href="" class="img-logo"><img class="logo" src="./" alt=""></a>
+          <ul class="link-menu">
              <li><a href="">Inicio</a></li>
              <li><a href="">Servicios</a></li>
              <li><a href="">Nosotros</a></li>
              <li><a href="">Contacto</a></li>
           </ul>
+
           <button class="ham" type="button">
             <span class="br-1"></span>
             <span class="br-2"></span>
@@ -24,5 +26,6 @@
 
         </nav>
     </header>
+    <script src="./main.js"></script>
 </body>
 </html>
