--- a/semana4/reto 6/index.html
+++ b/semana4/reto 6/index.html
@@ -9,7 +9,7 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="wrap">
+    <header class="wrap">
         <nav>
             <div class="logo">
                 <img class="logo-1" src="./rescursos/Ellipse (2).png" alt="">
@@ -31,6 +31,19 @@
                 </div>
             </div>
         </section>
-    </div>
+    </header>
+
+     <!-- BUSCADOR -->
+
+    <main class="main">
+        <section class="box">
+            <div class="box-search">
+                <input type="text" class="search" placeholder=" Search Article">
+            </div>
+        </section>
+    </main>    
+    
+
+
 </body>
 </html>
