--- a/semana5/dialunes/calculadora.html
+++ b/semana5/dialunes/calculadora.html
@@ -13,7 +13,7 @@
             <h1 class="text-info text-center">calculadora boostrap</h1>
             <form action="" class="d-flex flex-column gap-3" id="calculatorForm">
                 <div class="form-floating">
-                    <input type="number" class="form-control bg-transparent" placeholder="numero 1" step="0.01" required> <label for="">Numero 1</label>
+                    <input type="number" class="form-control bg-transparent text-light" placeholder="numero 1" step="0.01" required> <label for="">Numero 1</label>
                 </div>
                 <div class="form-floating">
                     <select name="" id="" class="form-select bg-dark text-light" id="operator" aria-label="Operator" required>
@@ -45,6 +45,6 @@
 
 
 
-    <script src="./calculadora.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+    <script src="./calculadora.js" type="module"></script>
   </body>
 </html>
