--- a/semana5/diadomingo/index.html
+++ b/semana5/diadomingo/index.html
@@ -7,10 +7,12 @@
     <title>Document</title>
 </head>
 <body>
-    <section>
-        <p>HOLA</p>
-    </section>
+    <h1>EVENTOS H1</h1>
+    <!-- un forma de poder capturar los eventos de mis elements es usando atributos de mi elemnto-->
 
-    <script src="./micodigo.js"></script>
+    <!-- evento oneclick-->
+
+
+    <script src="./eventos.js"></script>
 </body>
 </html>
